<resources>
    <string name="app_name">Deck of Cards</string>
    <string name="spade_button_name">Spade</string>
    <string name="diamond_button_name">Diamond</string>
    <string name="club_button_name">Club</string>
    <string name="heart_button_name">Heart</string>
    <string name="joker_button_name">Joker</string>
    <string name="unknown_button_name">Unknown</string>
    <string name="spades">Spades</string>
    <string name="diamonds">Diamonds</string>
    <string name="clubs">Clubs</string>
    <string name="hearts">Hearts</string>
    <string name="jokers">Jokers</string>
    <string name="default_spade_button_description">Spade button unselected</string>
    <string name="default_diamond_button_description">Diamond button unselected</string>
    <string name="default_club_button_description">Club button unselected</string>
    <string name="default_heart_button_description">Heart button unselected</string>
    <string name="default_joker_button_description">Joker button unselected</string>
    <string name="button_selected">button selected</string>
    <string name="button_unselected">button unselected</string>
    <string name="include_title">Include:</string>
    <string name="create_deck_button_text">Create Deck</string>
    <string name="cards_remaining">Cards remaining:</string>
    <string name="shuffle_button_text">Shuffle</string>
    <string name="shuffled_message">Shuffled!</string>
    <string name="default_card_image_description">Card back image</string>
    <string name="pseudo_3D_switch_text">3D</string>
    <string name="draw_card_button_text">Draw a Card</string>
    <string name="error_message">An error occurred.</string>
</resources>