<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeckViewerActivity">

    <ImageView
        android:id="@+id/cardImageView"
        android:layout_width="226dp"
        android:layout_height="314dp"
        android:contentDescription="@string/default_card_image_description"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/pseudo3DSwitch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.156"
        app:srcCompat="@drawable/back" />

    <TextView
        android:id="@+id/remainingCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cards_remaining"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/cardNameView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardImageView"
        app:layout_constraintVertical_bias="0.622" />

    <TextView
        android:id="@+id/cardNameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/pseudo3DSwitch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardImageView"
        app:layout_constraintVertical_bias="0.776" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/pseudo3DSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/pseudo_3D_switch_text"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/shuffleButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/shuffleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:padding="15dp"
        android:text="@string/shuffle_button_text"
        android:textSize="18sp"
        android:onClick="shuffle"
        app:layout_constraintBottom_toTopOf="@+id/drawButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/drawButton"
        android:layout_width="247dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:onClick="drawCard"
        android:padding="15dp"
        android:text="@string/draw_card_button_text"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>